Múltiplos servidores - fix erro em que ja havia um registro existente no RMI